# ADCP2

matlab/: process.m  readADCP.m  整理.txt  读取ADCP二进制文件.m
qt/: CMakeLists.txt  ColorWidget.cpp  ColorWidget.h  ExportWidget.cpp  ExportWidget.h  FileData.cpp  FileData.h  InfoWidget.cpp  InfoWidget.h  MainWindow.cpp  MainWindow.h  Profile.cpp  Profile.h  Series.cpp  Series.h  SubSet.cpp  SubSet.h  WholeSet.cpp  WholeSet.h  data2image.cpp  data2image.h  main.cpp
